Port to Forge 1.16.5 (untested)