@@ -2,34 +2,36 @@ package snownee.pdgamerules;
 
 import java.util.Map;
 
-import org.jetbrains.annotations.Nullable;
+import javax.annotation.Nullable;
 
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Maps;
 
-import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.CompoundNBT;
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.world.level.GameRules;
+import net.minecraft.world.GameRules;
 import snownee.pdgamerules.mixin.GameRulesAccess;
 import snownee.pdgamerules.mixin.GameRulesValueAccess;
 
 public class PDGameRules extends GameRules {
 	private final GameRules parent;
 	private final String dimension;
-	private final Cache<Key<?>, Value<?>> cache = CacheBuilder.newBuilder().build();
+	private final Cache<RuleKey<?>, RuleValue<?>> cache = CacheBuilder.newBuilder().build();
 
 	public PDGameRules(GameRules parent, String dimension) {
 		this.parent = parent;
 		this.dimension = dimension;
-		((GameRulesAccess) this).setRules(Map.of());
+		((GameRulesAccess) this).setRules(Maps.newHashMap());
 	}
 
 	@SuppressWarnings("unchecked")
 	@Override
-	public <T extends Value<T>> T getRule(Key<T> key) {
+	public <T extends RuleValue<T>> T getRule(RuleKey<T> key) {
 		try {
 			return (T) cache.get(key, () -> {
-				Map<String, Object> rules = PDGameRulesConfig.rules.getOrDefault(dimension, Map.of());
+				Map<String, Object> rules = PDGameRulesConfig.rules.getOrDefault(dimension, ImmutableMap.of());
 				Object value = rules.get(key.getId());
 				if (value == null) {
 					return parent.getRule(key);
@@ -39,7 +41,7 @@ public class PDGameRules extends GameRules {
 				rule.callDeserialize(String.valueOf(value));
 				return (T) rule;
 			});
-		} catch (Exception e) {
+		} catch (Exception ignored) {
 		}
 		return parent.getRule(key);
 	}
@@ -59,7 +61,7 @@ public class PDGameRules extends GameRules {
 	}
 
 	@Override
-	public CompoundTag createTag() {
+	public CompoundNBT createTag() {
 		return parent.createTag();
 	}
 }
